# NeuralNetwork

./: .gitignore  CMakeLists.txt  Frame.cpp  NeuralNetwork.aps  NeuralNetwork.rc  NeuralNetwork.sln  NeuralNetwork.vcxproj  NeuralNetwork.vcxproj.filters  NeuralNetwork_bkp.vcxproj  README.md  main.cpp
Graphics/: Frame.cpp  Frame.h  NetworkTrainingDialog.cpp  NetworkTrainingDialog.h  chartcontrol.cpp  chartcontrol.h
NeuralNetwork/: ActivationFunction.cpp  ActivationFunction.h  FunzioneDiAttivazione.cpp  FunzioneDiAttivazione.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  Neurone.cpp  Neurone.h
Utils/: VectorOperations.cpp  VectorOperations.h  resource.h
assets/: main.rc
generate_data/: NeuralNetwork.py  NeuralNetwork2.py  NeuralNetwork3.py  data_no_noise.txt  dataset.csv  error.txt  plot.py  result.txt  shuffled_data.txt  test.cpp  test.py
training_data/: abs.txt  cosx.txt  cubic.txt  exp.txt  gaussian.txt  inverse_quadratic.txt  linear.txt  quadratic.txt  sigmoid.txt  sinc.txt  sinx.txt  tanh.txt
